# SinesBox

./: CMakeLists.txt  README.md  SinesBox.cpp  SinesBox.h  test  test.cpp
.github/workflows/: cmake-single-platform.yml
include/: SinesBox.h  SinesGlobalSettings.h
src/: SinesBox.cpp
